@@ -3,15 +3,14 @@ package com.example.demo.service;
 import com.example.demo.dto.ServiceBookingRequest;
 import com.example.demo.dto.ServiceBookingResponse;
 import com.example.demo.entity.ServiceBooking;
+import com.example.demo.entity.GarageService;
+import com.example.demo.exception.ResourceNotFoundException;
 import com.example.demo.repository.ServiceBookingRepository;
 import com.example.demo.repository.ServiceRepository;
-import org.springframework.messaging.simp.SimpMessagingTemplate;
 import org.springframework.stereotype.Service;
 
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 public class ServiceBookingService {
@@ -20,19 +19,16 @@ public class ServiceBookingService {
     private final ServiceRepository serviceRepo;
     private final NotificationService notificationService;
 
-    private final SimpMessagingTemplate messagingTemplate;
-
-    public ServiceBookingService(ServiceBookingRepository bookingRepo,
-                                 ServiceRepository serviceRepo,
-                                 SimpMessagingTemplate messagingTemplate,
-                                 NotificationService notificationService) {
+    public ServiceBookingService(
+            ServiceBookingRepository bookingRepo,
+            ServiceRepository serviceRepo,
+            NotificationService notificationService
+    ) {
         this.bookingRepo = bookingRepo;
         this.serviceRepo = serviceRepo;
-        this.messagingTemplate = messagingTemplate;
         this.notificationService = notificationService;
     }
 
-   
     private ServiceBookingResponse convert(ServiceBooking booking) {
         ServiceBookingResponse res = new ServiceBookingResponse();
 
@@ -45,21 +41,27 @@ public class ServiceBookingService {
         res.setCarBrand(booking.getCarBrand());
         res.setCarModel(booking.getCarModel());
 
-        res.setServiceId(booking.getServiceId());
+        res.setServiceIds(booking.getServiceIds());
+
+        // lấy thông tin đầy đủ của từng service
+        List<GarageService> services = serviceRepo.findAllById(booking.getServiceIds());
+        res.setService(services);
+
         res.setNote(booking.getNote());
         res.setStatus(booking.getStatus());
-
         res.setBookingTime(booking.getBookingTime());
         res.setCreatedAt(booking.getCreatedAt());
 
         return res;
     }
 
-    
     public ServiceBookingResponse create(ServiceBookingRequest req) {
 
-        if (!serviceRepo.existsById(req.getServiceId())) {
-            throw new RuntimeException("Dịch vụ không tồn tại!");
+        // validate tất cả serviceIds
+        for (String sid : req.getServiceIds()) {
+            if (!serviceRepo.existsById(sid)) {
+                throw new ResourceNotFoundException("Dịch vụ không tồn tại: " + sid);
+            }
         }
 
         ServiceBooking booking = new ServiceBooking();
@@ -72,20 +74,21 @@ public class ServiceBookingService {
         booking.setCarBrand(req.getCarBrand());
         booking.setCarModel(req.getCarModel());
 
-        booking.setServiceId(req.getServiceId());
+        booking.setServiceIds(req.getServiceIds());
         booking.setNote(req.getNote());
         booking.setBookingTime(req.getBookingTime());
 
         booking.setStatus("PENDING");
+
         booking.setCreatedAt(LocalDateTime.now());
         booking.setUpdatedAt(LocalDateTime.now());
 
         bookingRepo.save(booking);
 
-        // Gửi thông báo đến Admin 
+        // Gửi thông báo
         notificationService.sendBookingToAdmin(
                 booking.getId(),
-                req.getCustomerEmail()   // client gửi đi bằng email
+                req.getCustomerEmail()
         );
 
         return convert(booking);
@@ -96,39 +99,53 @@ public class ServiceBookingService {
         return bookingRepo.findAll()
                 .stream()
                 .map(this::convert)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    public Optional<ServiceBookingResponse> getById(String id) {
-        return bookingRepo.findById(id).map(this::convert);
-    }
 
-   
-    public ServiceBookingResponse updateStatus(String id, String status) {
+    public ServiceBookingResponse getOne(String id) {
         ServiceBooking booking = bookingRepo.findById(id)
-                .orElseThrow(() -> new RuntimeException("Không tìm thấy đặt dịch vụ!"));
-
-        booking.setStatus(status);
-        booking.setUpdatedAt(LocalDateTime.now());
-        bookingRepo.save(booking);
-
-        // Admin xác nhận gửi thông báo về Client 
-        if (status.equals("CONFIRMED")) {
-            notificationService.sendConfirmToClient(
-                    booking.getId(),
-                    booking.getCustomerEmail(),   // FE sau này dùng userId nếu có
-                    "ADMIN"
-            );
-        }
+                .orElseThrow(() -> new ResourceNotFoundException("Không tìm thấy booking"));
 
         return convert(booking);
     }
 
-    public boolean delete(String id) {
+    public ServiceBookingResponse update(String id, ServiceBookingRequest req) {
+
+        ServiceBooking booking = bookingRepo.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Không tìm thấy booking"));
+
+        // validate serviceIds mới
+        for (String sid : req.getServiceIds()) {
+            if (!serviceRepo.existsById(sid)) {
+                throw new ResourceNotFoundException("Dịch vụ không tồn tại: " + sid);
+            }
+        }
+
+        booking.setCustomerName(req.getCustomerName());
+        booking.setCustomerPhone(req.getCustomerPhone());
+        booking.setCustomerEmail(req.getCustomerEmail());
+
+        booking.setLicensePlate(req.getLicensePlate());
+        booking.setCarBrand(req.getCarBrand());
+        booking.setCarModel(req.getCarModel());
+
+        booking.setServiceIds(req.getServiceIds());
+        booking.setNote(req.getNote());
+        booking.setBookingTime(req.getBookingTime());
+
+        booking.setUpdatedAt(LocalDateTime.now());
+
+        bookingRepo.save(booking);
+
+        return convert(booking);
+    }
+
+
+    public void delete(String id) {
         if (!bookingRepo.existsById(id)) {
-            throw new RuntimeException("Không tồn tại đặt dịch vụ!");
+            throw new ResourceNotFoundException("Không tìm thấy booking");
         }
         bookingRepo.deleteById(id);
-        return true;
     }
 }
